--- a/style.css
+++ b/style.css
@@ -1,51 +1,85 @@
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 0%;
+  margin: 0%;
 }
 
 body {
-  margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-align: center;
 }
 
 .wrapper {
+  width: 90%;
+  margin: 0 auto;
+}
+
+header {
+  width: 100%;
+  height: 140px;
+  background-color: white;
+  position: fixed;
+  z-index: 10;
+}
+
+.logo img {
+  width: 10%;
+  float: left;
+  margin-left: -5%;
+  margin-top: -15px;
+}
+
+nav {
+  float: right;
   display: flex;
-  height: 100vh;
+  align-items: baseline;
+  line-height: 140px;
 }
 
-.main {
-  flex-grow: 1;
-  padding: 20px;
-  overflow-y: auto;
+nav ul {
+  list-style: none;
+  display: flex;
+  align-items: baseline;
+  padding: 0;
+  margin: 0;
 }
 
-.side-panel-toggle {
-  width: 40px;
-  height: 40px;
-  flex-shrink: 0;
-  display: grid;
-  place-items: center;
-  color: white;
-  background-color: cadetblue;
-  border: none;
-  border-radius: 5px 0 0 5px;
-  cursor: pointer;
+nav li {
+  margin-right: 20px;
 }
 
-.side-panel-toggle:hover {
-  background-color: darkcyan;
+nav a {
+  text-decoration: none;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  letter-spacing: 2px;
+  font-size: 20px;
+  color: black;
+  border-bottom: black solid 1px;
+
 }
 
-.side-panel {
-  display: none;
-  width: 200px;
-  flex-shrink: 0;
-  padding: 20px;
-  color: white;
-  background-color: cadetblue;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
+nav a:hover {
+  text-decoration: none;
+  background-color: lightgray;
+  font-weight: bold;
 }
 
-.side-panel-open .side-panel {
-  display: initial;
+.banner-area {
+  background-image: url(banner.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 600px;
+  width: 100%;
+  position: fixed;
+}
+
+.banner-area::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0.5;
+  z-index: -1;
 }
