--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ nav a {
   text-decoration: none;
   font-family: Georgia, 'Times New Roman', Times, serif;
   letter-spacing: 2px;
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: normal;
   color: black;
   border-bottom: black solid 1px;
-
 }
 
 nav a:hover {
@@ -82,4 +82,38 @@ nav a:hover {
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0.5;
   z-index: -1;
+}
+
+.banner-area h2 {
+  text-align: center;
+  color: white;
+  font-size: 80px;
+  padding-top: 300px;
+}
+
+.content-area {
+  width: 100%;
+  height: 800px;
+  position: relative;
+  background: white;
+  top: 600px;
+}
+
+.content-area h2 {
+  text-align: center;
+  font-size: 50px;
+  margin: 0;
+  padding-top: 30px;
+  letter-spacing: 2px;
+}
+
+.content-area p {
+  color: black;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  justify-content: center;
+  font-size: 20px;
+  text-align: center;
+  padding: 2% 0;
+  line-height: 30px;
+  text-align: justify;
 }
