--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 * {
+  font-family: poppins;
   padding: 0%;
   margin: 0%;
 }
 
 body {
-  font-family: Georgia, 'Times New Roman', Times, serif;
   text-align: center;
 }
 
@@ -49,7 +49,6 @@ nav li {
 
 nav a {
   text-decoration: none;
-  font-family: Georgia, 'Times New Roman', Times, serif;
   letter-spacing: 2px;
   font-size: 25px;
   font-weight: normal;
@@ -59,8 +58,8 @@ nav a {
 
 nav a:hover {
   text-decoration: none;
-  background-color: lightgray;
-  font-weight: bold;
+  background-color: #e1e1e1;
+  font-weight: 200;
 }
 
 .banner-area {
@@ -91,6 +90,56 @@ nav a:hover {
   padding-top: 300px;
 }
 
+.ourTeam {
+  position: relative;
+  top: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  background-color: white;
+}
+
+.ourTeam h2 {
+  text-align: center;
+  font-size: 50px;
+  margin: 50px;
+  letter-spacing: 2px;
+  text-decoration: underline;
+}
+
+.ourTeam img {
+  width: 300px;
+  height: 300px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  border-radius: 50%;
+  margin-top: 30px;
+}
+
+.card-body h5 {
+  text-align: center;
+  font-size: 25px;
+  margin: 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  letter-spacing: 2px;
+  text-decoration: underline;
+}
+
+.card-body p {
+  color: black;
+  justify-content: center;
+  font-size: 15px;
+  text-align: center;
+  padding: 2% 0;
+  margin-left: 20px;
+  margin-right: 20px;
+  text-align: justify;
+}
+
 .content-area {
   width: 100%;
   height: 800px;
@@ -109,7 +158,6 @@ nav a:hover {
 
 .content-area p {
   color: black;
-  font-family: Georgia, 'Times New Roman', Times, serif;
   justify-content: center;
   font-size: 20px;
   text-align: center;
