--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
   background-color: white;
   position: fixed;
   z-index: 10;
+  background-color: whitesmoke;
 }
 
 .logo img {
@@ -48,6 +49,7 @@ nav li {
 }
 
 nav a {
+  position: relative;
   text-decoration: none;
   letter-spacing: 2px;
   font-size: 25px;
@@ -58,7 +60,7 @@ nav a {
 
 nav a:hover {
   text-decoration: none;
-  background-color: #e1e1e1;
+  background-color: #99e7bc65;
   font-weight: 200;
 }
 
@@ -139,6 +141,67 @@ nav a:hover {
   margin-right: 20px;
   text-align: justify;
 }
+
+form {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.ourTeam h2 {
+  position: relative;
+  text-align: center;
+  font-size: 50px;
+  margin: 50px;
+  letter-spacing: 2px;
+  text-decoration: underline;
+  color: black;
+
+}
+
+form div {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+input[type="file"] {
+  padding: 5px;
+}
+
+button {
+  background-color: rgb(152, 152, 152);
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgb(164, 164, 164);
+}
+
+.note {
+  font-size: 0.9em;
+  color: #555;
+}
+
 .content-area {
   width: 100%;
   height: 800px;
