--- a/style.css
+++ b/style.css
@@ -8,6 +8,18 @@ body {
   text-align: center;
 }
 
+@media only screen and (max-width: 767px) {
+  body {
+    height: 170vh;
+  }
+}
+
+@media only screen and (max-width: 480px) and (min-width: 320px) {
+  body {
+    height: 150vh;
+  }
+}
+
 .wrapper {
   width: 90%;
   margin: 0 auto;
@@ -15,7 +27,7 @@ body {
 
 header {
   width: 100%;
-  height: 140px;
+  height: auto;
   background-color: white;
   position: fixed;
   z-index: 10;
@@ -23,10 +35,10 @@ header {
 }
 
 .logo img {
-  width: 10%;
+  width: 150px;
   float: left;
   margin-left: -5%;
-  margin-top: -15px;
+  margin-top: -10px;
 }
 
 nav {
@@ -42,6 +54,8 @@ nav ul {
   align-items: baseline;
   padding: 0;
   margin: 0;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 nav li {
