--- a/style.css
+++ b/style.css
@@ -34,47 +34,48 @@ header {
   background-color: whitesmoke;
 }
 
+.logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .logo img {
-  width: 150px;
-  float: left;
-  margin-left: -5%;
-  margin-top: -10px;
+  width: 100px;
 }
 
 nav {
   float: right;
   display: flex;
   align-items: baseline;
-  line-height: 140px;
 }
 
 nav ul {
   list-style: none;
   display: flex;
-  align-items: baseline;
-  padding: 0;
-  margin: 0;
   flex-wrap: wrap;
   justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 nav li {
-  margin-right: 20px;
+  margin: 20px;
+  padding: 10px;
 }
 
 nav a {
   position: relative;
   text-decoration: none;
-  letter-spacing: 2px;
   font-size: 25px;
   font-weight: normal;
   color: black;
-  border-bottom: black solid 1px;
+  border-bottom: 1px solid black;
 }
 
 nav a:hover {
   text-decoration: none;
-  background-color: #99e7bc65;
+  background-color: rgba(153, 231, 188, 0.4);
   font-weight: 200;
 }
 
