--- a/style.css
+++ b/style.css
@@ -79,37 +79,28 @@ nav a:hover {
   font-weight: 200;
 }
 
-.banner-area {
-  background-image: url(banner.jpg);
+.banner-area img {
   background-size: cover;
   background-position: center;
-  height: 600px;
   width: 100%;
-  position: fixed;
-}
-
-.banner-area::after {
-  content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0.5;
   z-index: -1;
+  height: 100vh;
 }
 
 .banner-area h2 {
+  margin-left: 5px;
+  margin-right: 5px;
   text-align: center;
   color: white;
   font-size: 80px;
-  padding-top: 300px;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
 }
 
 .ourTeam {
   position: relative;
-  top: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -163,8 +154,8 @@ form {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 600px;
-  margin: 0 auto;
   position: relative;
+  margin-top: 50px;
 }
 
 .ourTeam h2 {
@@ -217,12 +208,11 @@ button:hover {
   color: #555;
 }
 
-.content-area {
+.content-area {;
   width: 100%;
-  height: 800px;
-  position: relative;
   background: white;
   top: 200px;
+  margin-bottom: auto;
 }
 
 .content-area h2 {
